<resources>
    <string name="app_name">NY Times Explorer</string>
    <string name="app_title">NY Times Explorer</string>
    <string name="action_filter">Filter</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="arts">Arts</string>
    <string name="fashion_style">Fashion and style</string>
    <string name="sports">Sports</string>
    <string name="news_desk_values">News desk values</string>
    <string name="sort_order">Sort order</string>
    <string name="begin_date">Begin date</string>
    <string name="save">Save</string>
    <string name="reset">Reset Filters</string>
    <string name="welcome">Search and explore the New York Times article collection!</string>
</resources>
