<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codepath.tiago.nytimessearch.activities.FilterActivity">

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/begin_date" />

    <DatePicker
        android:id="@+id/dpBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:layout_below="@+id/tvDateLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvOrderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dpBeginDate"
        android:text="@string/sort_order" />

    <Spinner
        android:id="@+id/sSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_order_array"
        android:prompt="@string/search"
        android:layout_below="@+id/tvOrderLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvCbLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sSort"
        android:text="@string/news_desk_values" />

    <LinearLayout
        android:id="@+id/llCheckboxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tvCbLabel"
        android:layout_centerHorizontal="true">

        <CheckBox
            android:id="@+id/cbArts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arts" />

        <CheckBox
            android:id="@+id/cbFashionStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fashion_style" />

        <CheckBox
            android:id="@+id/cbSpots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

    </LinearLayout>


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/llCheckboxes"
        android:layout_centerHorizontal="true"
        android:onClick="saveFilters" />

</RelativeLayout>
